--- a/app.css
+++ b/app.css
@@ -1,18 +1,35 @@
-h2 {
-    color: #5FCFFC;
-    background-color: rgb(89, 151, 0);
+/*h2 {*/
+/*    color: #5FCFFC;*/
+/*    background-color: rgb(89, 151, 0);*/
+/*}*/
+
+/*button {*/
+/*    color: magenta;*/
+/*    background-color: cyan;*/
+/*}*/
+
+/*p {*/
+/*    color: olive;*/
+/*    background: orange;*/
+/*}*/
+
+/*body {*/
+/*    background-color: #cc55ee;*/
+/*}*/
+
+h1 {
+    text-align: center;
+    font-weight: 400;
+    text-decoration: #f78120 underline;
+    letter-spacing: 15px;
+    font-size: 80px;
+    font-family: Arial
 }
 
-button {
-    color: magenta;
-    background-color: cyan;
+a {
+    text-decoration: none
 }
 
 p {
-    color: olive;
-    background: orange;
-}
-
-body {
-    background-color: #cc55ee;
+    line-height: 2;
 }
